Update Notebook with more inference experiments

--- a/notebooks/glue_tasks.ipynb
+++ b/notebooks/glue_tasks.ipynb
@@ -96,18 +96,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "pretrained_bert=\"s3://{}/embeddings/bert_base_cased/\".format(bucket)\n",
     "\n",
     "\n",
-    "trainfile = \"s3://{}/glue_dataset/train/multinli_1.0_train.jsonl\".format(bucket)\n",
-    "# valfile=\"s3://{}/mnli_dataset/val/multinli_1.0_dev_matched.jsonl\".format(bucket)\n",
+    "trainfile = \"s3://{}/glue_data/train.tsv\".format(bucket)\n",
     "\n",
-    "#trainfile = \"s3://{}/mnli_dataset_mini/train/multinli.jsonl\".format(bucket)\n",
-    "valfile=\"s3://{}/glue_dataset_mini/train/multinli.jsonl\".format(bucket)\n",
+    "val_matched_file=\"s3://{}/glue_data_pred/dev_matched.csv\".format(bucket)\n",
+    "val_matched_shuffle_file=\"s3://{}/glue_data_pred/dev_matched_shuffled.csv\".format(bucket)\n",
+    "\n",
+    "\n",
+    "val_mismatched_file=\"s3://{}/glue_data_pred/dev_mismatched.csv\".format(bucket)\n",
+    "\n",
     "\n",
     "model_version = \"mnli-reverse-lang-bert-accuracy-2022-01-23-21-29-34-327\"\n",
     "\n",
@@ -504,38 +507,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "inference_experiments = {   \n",
-    "     \"glue-reverse-mnli-pretrained-pred\" : {\n",
-    "        \"model\" : s3_model_package_path\n",
+    "     \"glue-reverse-mnli-pretrained-pred-dev-m\" : {\n",
+    "        \"model\" : s3_model_package_path,\n",
+    "         \"data\" : val_matched_file\n",
     "    },\n",
-    "     \"glue-reverse-mnli-finetuned-pred\" : {\n",
-    "        \"model\" : \"s3://aegovan-data/gluebenchmark_sagemakerresults/gluebenchmark-reversemnli-202202201547/\"\n",
+    "     \"glue-reverse-mnli-finetuned-pred-dev-m\" : {\n",
+    "        \"model\" : \"s3://aegovan-data/gluebenchmark_sagemakerresults/gluebenchmark-reversemnli-202202201547/\",\n",
+    "        \"data\" : val_matched_file\n",
     "    },\n",
-    "    \"glue-bert-base-pretrained-pred\" : {\n",
-    "        \"model\" : pretrained_bert\n",
+    "    \"glue-bert-base-pretrained-pred-dev-m\" : {\n",
+    "        \"model\" : pretrained_bert,\n",
+    "        \"data\" : val_matched_file\n",
     "    },\n",
-    "     \"glue-bert-base-finetuned-pred\" : {\n",
-    "        \"model\" : \"s3://aegovan-data/gluebenchmark_sagemakerresults/gluebenchmark-bertbase-202202201547/\"\n",
+    "     \"glue-bert-base-finetuned-pred-dev-m\" : {\n",
+    "        \"model\" : \"s3://aegovan-data/gluebenchmark_sagemakerresults/gluebenchmark-bertbase-202202201547/\",\n",
+    "         \"data\" : val_matched_file\n",
+    "    },\n",
+    "    \"glue-reverse-mnli-pretrained-pred-dev-m-shuf\" : {\n",
+    "        \"model\" : s3_model_package_path,\n",
+    "         \"data\" : val_matched_shuffle_file\n",
+    "    },\n",
+    "    \"glue-reverse-mnli-finetuned-pred-dev-m-shuf\" : {\n",
+    "        \"model\" : \"s3://aegovan-data/gluebenchmark_sagemakerresults/gluebenchmark-reversemnli-202202201547/\",\n",
+    "        \"data\" : val_matched_shuffle_file\n",
+    "    },\n",
+    "    \"glue-bert-base-pretrained-pred-dev-m-shuf\" : {\n",
+    "        \"model\" : pretrained_bert,\n",
+    "        \"data\" : val_matched_shuffle_file\n",
+    "    },\n",
+    "     \"glue-bert-base-finetuned-pred-dev-m-shuf\" : {\n",
+    "        \"model\" : \"s3://aegovan-data/gluebenchmark_sagemakerresults/gluebenchmark-bertbase-202202201547/\",\n",
+    "        \"data\" : val_matched_shuffle_file\n",
     "    }\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment = \"glue-reverse-mnli-finetuned-pred\""
+    "experiment = \"glue-bert-base-pretrained-pred-dev-m-shuf\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -543,9 +566,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Job Name:  glue-reverse-mnli-finetuned-pred-202202261121\n",
-      "Inputs:  [{'InputName': 'input-1', 'AppManaged': False, 'S3Input': {'S3Uri': 's3://aegovan-data/gluebenchmark_sagemakerresults/gluebenchmark-reversemnli-202202201547/', 'LocalPath': '/opt/ml/processing/input/data/model', 'S3DataType': 'S3Prefix', 'S3InputMode': 'File', 'S3DataDistributionType': 'FullyReplicated', 'S3CompressionType': 'None'}}, {'InputName': 'code', 'AppManaged': False, 'S3Input': {'S3Uri': 's3://aegovan-data/gbucket_code/glue-reverse-mnli-finetuned-pred-202202261121/source/sourcedir.tar.gz', 'LocalPath': '/opt/ml/processing/input/code/', 'S3DataType': 'S3Prefix', 'S3InputMode': 'File', 'S3DataDistributionType': 'FullyReplicated', 'S3CompressionType': 'None'}}, {'InputName': 'entrypoint', 'AppManaged': False, 'S3Input': {'S3Uri': 's3://aegovan-data/gbucket_code/glue-reverse-mnli-finetuned-pred-202202261121/source/runproc.sh', 'LocalPath': '/opt/ml/processing/input/entrypoint', 'S3DataType': 'S3Prefix', 'S3InputMode': 'File', 'S3DataDistributionType': 'FullyReplicated', 'S3CompressionType': 'None'}}]\n",
-      "Outputs:  [{'OutputName': 'predictions', 'AppManaged': False, 'S3Output': {'S3Uri': 's3://aegovan-data/gluebenchmark_sagemakerresults/glue-reverse-mnli-finetuned-pred-202202261121', 'LocalPath': '/opt/ml/processing/output', 'S3UploadMode': 'EndOfJob'}}]\n"
+      "Job Name:  glue-bert-base-pretrained-pred-dev-m-shuf-202202261836\n",
+      "Inputs:  [{'InputName': 'input-1', 'AppManaged': False, 'S3Input': {'S3Uri': 's3://aegovan-data/glue_data_pred/dev_matched_shuffled.csv', 'LocalPath': '/opt/ml/processing/input/data/jsonlines', 'S3DataType': 'S3Prefix', 'S3InputMode': 'File', 'S3DataDistributionType': 'FullyReplicated', 'S3CompressionType': 'None'}}, {'InputName': 'input-2', 'AppManaged': False, 'S3Input': {'S3Uri': 's3://aegovan-data/embeddings/bert_base_cased/', 'LocalPath': '/opt/ml/processing/input/data/model', 'S3DataType': 'S3Prefix', 'S3InputMode': 'File', 'S3DataDistributionType': 'FullyReplicated', 'S3CompressionType': 'None'}}, {'InputName': 'code', 'AppManaged': False, 'S3Input': {'S3Uri': 's3://aegovan-data/gbucket_code/glue-bert-base-pretrained-pred-dev-m-shuf-202202261836/source/sourcedir.tar.gz', 'LocalPath': '/opt/ml/processing/input/code/', 'S3DataType': 'S3Prefix', 'S3InputMode': 'File', 'S3DataDistributionType': 'FullyReplicated', 'S3CompressionType': 'None'}}, {'InputName': 'entrypoint', 'AppManaged': False, 'S3Input': {'S3Uri': 's3://aegovan-data/gbucket_code/glue-bert-base-pretrained-pred-dev-m-shuf-202202261836/source/runproc.sh', 'LocalPath': '/opt/ml/processing/input/entrypoint', 'S3DataType': 'S3Prefix', 'S3InputMode': 'File', 'S3DataDistributionType': 'FullyReplicated', 'S3CompressionType': 'None'}}]\n",
+      "Outputs:  [{'OutputName': 'predictions', 'AppManaged': False, 'S3Output': {'S3Uri': 's3://aegovan-data/gluebenchmark_sagemakerresults/glue-bert-base-pretrained-pred-dev-m-shuf-202202261836', 'LocalPath': '/opt/ml/processing/output', 'S3UploadMode': 'EndOfJob'}}]\n"
      ]
     }
    ],
@@ -573,7 +596,7 @@
     "\n",
     "job_name = \"{}-{}\".format(experiment, datetime.now().strftime(\"%Y%m%d%H%M\"))\n",
     "s3_inference_model = inference_experiments[experiment][\"model\"]\n",
-    "\n",
+    "prediction_s3_file = inference_experiments[experiment][\"data\"]\n",
     "\n",
     "sm_local_input_model = \"/opt/ml/processing/input/data/model\"\n",
     "sm_local_input_data = \"/opt/ml/processing/input/data/jsonlines\"\n",
@@ -589,11 +612,13 @@
     "    \n",
     "        source_dir=f'{transformer_examples_dir}/examples/pytorch/text-classification',\n",
     "        arguments=[\n",
-    "            \"--task_name\", \"mnli\",\n",
+    "           # \"--task_name\", \"mnli\",\n",
     "            \"--model_name_or_path\", sm_local_input_model,\n",
     "            \"--do_train\", \"0\",\n",
     "            \"--do_eval\",\"1\",\n",
-    "            \"--do_predict\",\"1\",\n",
+    "            \"--do_predict\",\"0\",\n",
+    "            \"--train_file\", \"{}/{}\".format(sm_local_input_data.rstrip(\"/\"),prediction_s3_file.split(\"/\")[-1] ),\n",
+    "            \"--validation_file\", \"{}/{}\".format(sm_local_input_data.rstrip(\"/\"),prediction_s3_file.split(\"/\")[-1] ),\n",
     "            \"--max_seq_length\", str(512),\n",
     "            \"--per_device_train_batch_size\", str(32),\n",
     "        \n",
@@ -605,11 +630,10 @@
     "        ],\n",
     "\n",
     "        inputs=[\n",
-    "#                 ProcessingInput(\n",
-    "#                     source=s3_input_data,\n",
-    "#                     s3_data_type = s3_data_type,\n",
-    "#                     destination=sm_local_input_data,\n",
-    "#                     s3_data_distribution_type=\"FullyReplicated\"),\n",
+    "                ProcessingInput(\n",
+    "                    source=prediction_s3_file,\n",
+    "                    destination=sm_local_input_data,\n",
+    "                    s3_data_distribution_type=\"FullyReplicated\"),\n",
     "\n",
     "                ProcessingInput(\n",
     "                        source=s3_inference_model,\n",
