--- a/notebooks/glue_tasks.ipynb
+++ b/notebooks/glue_tasks.ipynb
@@ -272,7 +272,8 @@
     "            \"--overwrite_output_dir\", \"1\",\n",
     "            \"--load_best_model_at_end\", \"1\",     # load the best model when finished training (default metric is loss)\n",
     "            \"--eval_steps\",\"200\",\n",
-    "            \"--save_steps\",\"200\",\n",
+    "            \"--save_steps\",\"5000\",\n",
+    "            \"--save_total_limit\", \"3\",\n",
     "            \"--evaluation_strategy\",\"steps\",\n",
     "            \"--disable_tqdm\",\"1\"\n",
     "           \n",
@@ -393,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -401,9 +402,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Job Name:  gluebenchmark-reversemnli-202202271646\n",
-      "Inputs:  [{'InputName': 'input-1', 'AppManaged': False, 'S3Input': {'S3Uri': 's3://aegovan-data/models/mnli-reverse-lang-bert-accuracy-2022-01-23-21-29-34-327/output', 'LocalPath': '/opt/ml/processing/input/data/model', 'S3DataType': 'S3Prefix', 'S3InputMode': 'File', 'S3DataDistributionType': 'FullyReplicated', 'S3CompressionType': 'None'}}, {'InputName': 'code', 'AppManaged': False, 'S3Input': {'S3Uri': 's3://aegovan-data/gbucket_code/gluebenchmark-reversemnli-202202271646/source/sourcedir.tar.gz', 'LocalPath': '/opt/ml/processing/input/code/', 'S3DataType': 'S3Prefix', 'S3InputMode': 'File', 'S3DataDistributionType': 'FullyReplicated', 'S3CompressionType': 'None'}}, {'InputName': 'entrypoint', 'AppManaged': False, 'S3Input': {'S3Uri': 's3://aegovan-data/gbucket_code/gluebenchmark-reversemnli-202202271646/source/runproc.sh', 'LocalPath': '/opt/ml/processing/input/entrypoint', 'S3DataType': 'S3Prefix', 'S3InputMode': 'File', 'S3DataDistributionType': 'FullyReplicated', 'S3CompressionType': 'None'}}]\n",
-      "Outputs:  [{'OutputName': 'predictions', 'AppManaged': False, 'S3Output': {'S3Uri': 's3://aegovan-data/gluebenchmark_sagemakerresults/gluebenchmark-reversemnli-202202271646', 'LocalPath': '/opt/ml/processing/output', 'S3UploadMode': 'EndOfJob'}}]\n"
+      "Job Name:  gluebenchmark-reversemnli-202203020448\n",
+      "Inputs:  [{'InputName': 'input-1', 'AppManaged': False, 'S3Input': {'S3Uri': 's3://aegovan-data/models/mnli-reverse-lang-bert-accuracy-2022-01-23-21-29-34-327/output', 'LocalPath': '/opt/ml/processing/input/data/model', 'S3DataType': 'S3Prefix', 'S3InputMode': 'File', 'S3DataDistributionType': 'FullyReplicated', 'S3CompressionType': 'None'}}, {'InputName': 'code', 'AppManaged': False, 'S3Input': {'S3Uri': 's3://aegovan-data/gbucket_code/gluebenchmark-reversemnli-202203020448/source/sourcedir.tar.gz', 'LocalPath': '/opt/ml/processing/input/code/', 'S3DataType': 'S3Prefix', 'S3InputMode': 'File', 'S3DataDistributionType': 'FullyReplicated', 'S3CompressionType': 'None'}}, {'InputName': 'entrypoint', 'AppManaged': False, 'S3Input': {'S3Uri': 's3://aegovan-data/gbucket_code/gluebenchmark-reversemnli-202203020448/source/runproc.sh', 'LocalPath': '/opt/ml/processing/input/entrypoint', 'S3DataType': 'S3Prefix', 'S3InputMode': 'File', 'S3DataDistributionType': 'FullyReplicated', 'S3CompressionType': 'None'}}]\n",
+      "Outputs:  [{'OutputName': 'predictions', 'AppManaged': False, 'S3Output': {'S3Uri': 's3://aegovan-data/gluebenchmark_sagemakerresults/gluebenchmark-reversemnli-202203020448', 'LocalPath': '/opt/ml/processing/output', 'S3UploadMode': 'EndOfJob'}}]\n"
      ]
     }
    ],
@@ -466,7 +467,8 @@
     "            \"--overwrite_output_dir\", \"1\",\n",
     "            \"--load_best_model_at_end\", \"1\",     # load the best model when finished training (default metric is loss)\n",
     "            \"--eval_steps\",\"200\",\n",
-    "            \"--save_steps\",\"200\",\n",
+    "            \"--save_steps\",\"5000\",\n",
+    "            \"--save_total_limit\", \"3\",\n",
     "            \"--evaluation_strategy\",\"steps\",\n",
     "            \"--disable_tqdm\",\"1\"\n",
     "           \n",
