Refactor and add chemprot dataset

--- a/notebooks/ptm_ppi_shortcut_analysis.ipynb
+++ b/notebooks/ptm_ppi_shortcut_analysis.ipynb
@@ -15880,6 +15880,133 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model</th>\n",
+       "      <th>p</th>\n",
+       "      <th>r</th>\n",
+       "      <th>f</th>\n",
+       "      <th>k</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Naive Bayes</td>\n",
+       "      <td>67.1 (0.4)</td>\n",
+       "      <td>93.5 (0.1)</td>\n",
+       "      <td>78.2 (0.3)</td>\n",
+       "      <td>76.8 (0.3)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Naive Bayes + Tree</td>\n",
+       "      <td>81.8 (0.5)</td>\n",
+       "      <td>90.6 (0.9)</td>\n",
+       "      <td>85.9 (0.3)</td>\n",
+       "      <td>85.1 (0.3)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                model           p           r           f           k\n",
+       "0         Naive Bayes  67.1 (0.4)  93.5 (0.1)  78.2 (0.3)  76.8 (0.3)\n",
+       "1  Naive Bayes + Tree  81.8 (0.5)  90.6 (0.9)  85.9 (0.3)  85.1 (0.3)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def display_random_runs( df) :\n",
+    "    r = df_largescale_multiple_random_runs.groupby(\"model\").agg(\n",
+    "        mean_precision = ('precision', 'mean'),\n",
+    "        sem_precision = ('precision', 'sem'),\n",
+    "        mean_recall = ('recall', 'mean'),\n",
+    "        sem_recall = ('recall', 'sem'),\n",
+    "        mean_f1 = ('f1-score', 'mean'),\n",
+    "        sem_f1 = ('f1-score', 'sem'),        \n",
+    "        mean_kappa = ('kohenskappa', 'mean'),\n",
+    "        sem_kappa = ('kohenskappa', 'sem'),  \n",
+    "\n",
+    "        ).reset_index()\n",
+    "    \n",
+    "    r_latex = pd.DataFrame()\n",
+    "    \n",
+    "    r_latex[\"model\"] = r[\"model\"]\n",
+    "    r_latex[\"p\"] =  r[\"mean_precision\"].apply(lambda x: str(round(100*x,1))) + \" (\" \\\n",
+    "                   + r[\"sem_precision\"].apply(lambda x: str(round(100*x,1))) + \")\"\n",
+    "    \n",
+    "    \n",
+    "    r_latex[\"r\"] =  r[\"mean_recall\"].apply(lambda x: str(round(100*x,1))) + \" (\" \\\n",
+    "                   + r[\"sem_recall\"].apply(lambda x: str(round(100*x,1))) + \")\"\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    r_latex[\"f\"] =  r[\"mean_f1\"].apply(lambda x: str(round(100*x,1))) + \" (\" \\\n",
+    "                   + r[\"sem_f1\"].apply(lambda x: str(round(100*x,1))) + \")\"\n",
+    "    \n",
+    "    \n",
+    "    r_latex[\"k\"] =  r[\"mean_kappa\"].apply(lambda x: str(round(100*x,1))) + \" (\" \\\n",
+    "                   + r[\"sem_kappa\"].apply(lambda x: str(round(100*x,1))) + \")\"\n",
+    "    return r_latex\n",
+    "    \n",
+    "display_random_runs(df_largescale_multiple_random_runs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{tabular}{lllll}\n",
+      "\\toprule\n",
+      "             model &          p &          r &          f &          k \\\\\n",
+      "\\midrule\n",
+      "       Naive Bayes & 67.1 (0.4) & 93.5 (0.1) & 78.2 (0.3) & 76.8 (0.3) \\\\\n",
+      "Naive Bayes + Tree & 81.8 (0.5) & 90.6 (0.9) & 85.9 (0.3) & 85.1 (0.3) \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(display_random_runs(df_largescale_multiple_random_runs).to_latex(index=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
    "outputs": [
